# hello-axum

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
site/: $name.html  $test.html  .$name.html  base.html  footer.html  index.html
site/api/: $name.html
site/homepage/: index.html
site/page_1/: index.html
site/templates/: footer.html  header.html  wip.html
site/tera_test/: $name.html
src/: main.rs
static/: index.html
static/page_1/: index.html
