[package]
name = "hello-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-template = {version ="2.3.0", features = ["tera"]}
tera = "1"

serde = { version = "1", features = ["derive"]}
thiserror = "1"


tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
